# tessera

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  demo.tape  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: architecture.md  benchmarks.md  configuration.md  first-five-minutes.md  integrations.md  mcp.md  quickstart.md  troubleshooting.md  when-not-to-use.md
docs/json-schemas/: tessera-cli-v0.5.schema.json
examples/sample/: UserList.tsx  UserRepository.java  UserService.cs  UserService.java  UserService.php  UserStore.cpp  service.py  store.c  store.rs  user_service.rb  users.go  users.ts
launch/: RUNBOOK.md  devto-post.md  directories.md  reddit-claudeai.md  reddit-localllama.md  reddit-programming.md  reddit-rust.md  show-hn.md  twitter-thread.md
npm/: README.md  install.js  package.json
packaging/homebrew/: tessera.rb
skills/: README.md
skills/tessera/: SKILL.md
src/: bench.rs  bloom.rs  completions.rs  config.rs  db.rs  doctor.rs  engine.rs  indexer.rs  init.rs  lib.rs  main.rs  mcp.rs  mcp_http.rs  query.rs  snapshot.rs  types.rs  watch.rs
tests/: e2e.rs  lib_api.rs  snapshot.rs  v06_correctness.rs
