[package]
name = "tessera-codegraph"
version = "0.1.0"
edition = "2021"
authors = ["Saquib <saquibulhassan6@gmail.com>"]
description = "A local semantic code graph and MCP server for AI coding agents."
license = "Apache-2.0"
repository = "https://github.com/iamsaquib8/tessera"
homepage = "https://github.com/iamsaquib8/tessera"
documentation = "https://docs.rs/tessera-codegraph"
readme = "README.md"
rust-version = "1.82"
keywords = ["mcp", "codegraph", "tree-sitter", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/ISSUE_TEMPLATE/*"]

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
