[package]
name = "tessera-codegraph"
version = "0.2.0"
edition = "2021"
authors = ["Saquib <saquibulhassan6@gmail.com>"]
description = "A local semantic code graph and MCP server for AI coding agents. Personalized PageRank impact, hallucination validator, incremental indexing."
license = "Apache-2.0"
repository = "https://github.com/iamsaquib8/tessera"
homepage = "https://github.com/iamsaquib8/tessera"
documentation = "https://docs.rs/tessera-codegraph"
readme = "README.md"
rust-version = "1.82"
keywords = ["mcp", "codegraph", "tree-sitter", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/ISSUE_TEMPLATE/*"]

[lib]
name = "tessera_codegraph"
path = "src/lib.rs"

[[bin]]
name = "tessera"
path = "src/main.rs"

[features]
default = []
# `cozo` is a placeholder feature for a future Datalog backend. Enabling it
# today is a no-op: the trait infrastructure is in place, but the embedded
# Cozo dependency is intentionally not wired up until its API stabilises.
cozo = []

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bit-vec = "0.6"
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
petgraph = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
tempfile = "3.13"
tree-sitter = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
