[package]
name = "tessera-codegraph"
version = "0.8.0"
edition = "2021"
authors = ["Saquib <saquibulhassan6@gmail.com>"]
description = "A local, deterministic semantic code graph and MCP server for AI coding agents. 11 languages, personalized PageRank impact, hallucination validator, call-path tracing, graph export, incremental indexing."
license = "Apache-2.0"
repository = "https://github.com/iamsaquib8/tessera"
homepage = "https://github.com/iamsaquib8/tessera"
documentation = "https://docs.rs/tessera-codegraph"
readme = "README.md"
rust-version = "1.82"
keywords = ["mcp", "codegraph", "tree-sitter", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/ISSUE_TEMPLATE/*"]

[lib]
name = "tessera_codegraph"
path = "src/lib.rs"

[[bin]]
name = "tessera"
path = "src/main.rs"

[features]
default = []
# `cozo` is a placeholder feature for a future Datalog backend. Enabling it
# today is a no-op: the trait infrastructure is in place, but the embedded
# Cozo dependency is intentionally not wired up until its API stabilises.
cozo = []

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bit-vec = "0.6"
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
petgraph = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
tempfile = "3.13"
# tree-sitter-rust 0.20.1+ declares `tree-sitter = ">= 0.20"` (no upper
# bound), which lets fresh resolution pull tree-sitter 0.26 alongside our
# 0.20 line. We pin to =0.20.0 (whose declared dep is the proper bounded
# `tree-sitter = "0.20"`) to keep the workspace on a single tree-sitter
# major. Same idea for the other grammars — bounded majors only.
tree-sitter = ">=0.20, <0.21"
tree-sitter-c = ">=0.20, <0.21"
tree-sitter-c-sharp = ">=0.20, <0.21"
tree-sitter-cpp = ">=0.20, <0.21"
tree-sitter-go = ">=0.20, <0.21"
tree-sitter-java = ">=0.20, <0.21"
tree-sitter-javascript = ">=0.20, <0.21"
tree-sitter-php = ">=0.20, <0.21"
tree-sitter-python = ">=0.20, <0.21"
tree-sitter-ruby = ">=0.20, <0.21"
tree-sitter-rust = "=0.20.0"
tree-sitter-typescript = ">=0.20, <0.21"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
